--- a/css/style.css
+++ b/css/style.css
@@ -11,7 +11,7 @@
 @import url('/Portafolio/css/ringfire.css');
 @import url('/Portafolio/css/rubik.css');
 @import url('/Portafolio/css/loading-conic.css');
-
+@import url('/Portafolio/css/form.css');
 
 
 
