--- a/css/3d.css
+++ b/css/3d.css
@@ -110,7 +110,7 @@ color: aliceblue;
    
     transform:
          translate3d(-3rem,0,9rem)
-         rotate3d(1,1,1,5deg)
+         rotate3d(1,-20,1,15deg)
          scale3d(1.2,1.2,1)
          ;
         transform-style: preserve-3d;
@@ -130,5 +130,6 @@ color: aliceblue;
   width: 100%;
   height: 30rem;
   border: solid 0.4rem black;
+  resize: both;
 
 }  
