--- a/layout/calculator.html
+++ b/layout/calculator.html
@@ -16,6 +16,8 @@
         <a href="/Portafolio/layout/gallery.html">Galeria</a>
         <a href="/Portafolio/layout/listado.html">Listado</a>
         <a href="/Portafolio/layout/3d.html">3D(only desktop) </a>
+        <a href="/Portafolio/layout/formulario.html">Contacto</a>
+
     </div>
     <div id="main">
         <span class="header" onclick="openNav()">&#9776; menu</span>
@@ -92,7 +94,7 @@
         </div>
         </div>
     </section>
-    <script src="js/calculator.js"></script>
+    <script src="/Portafolio/js/calculator.js"></script>
 
     <footer class="footer">
         <marquee class="marquee">
