--- a/layout/gallery.html
+++ b/layout/gallery.html
@@ -15,6 +15,8 @@
     <a href="/Portafolio/layout/gallery.html">Galeria</a>
     <a href="/Portafolio/layout/listado.html">Listado</a>
     <a href="/Portafolio/layout/3d.html">3D(only desktop) </a>
+    <a href="/Portafolio/layout/formulario.html">Contacto</a>
+
 </div>
 
 
