--- a/layout/listado.html
+++ b/layout/listado.html
@@ -17,6 +17,8 @@
         <a href="/Portafolio/layout/gallery.html">Galeria</a>
         <a href="/Portafolio/layout/listado.html">Listado</a>
         <a href="/Portafolio/layout/3d.html">3D(only desktop) </a>
+        <a href="/Portafolio/layout/formulario.html">Contacto</a>
+
     </div>
 
     <div id="main">
