--- a/layout/listado.html
+++ b/layout/listado.html
@@ -41,7 +41,7 @@
             <li>Ver una Peli</li>
         </ul>
         
-        <script src="js/listado.js"></script>
+        <script src="/Portafolio/js/listado.js"></script>
     </div>
 
     <footer class="footer">
