--- a/css/style.css
+++ b/css/style.css
@@ -1,17 +1,17 @@
 @import url('https://fonts.googleapis.com/css2?family=Piazzolla:wght@300&display=swap');
-@import url('/Portafolio/css/etc.css');
-@import url('/Portafolio/css/presentacion-1.css');
-@import url('/Portafolio/css/header.css');
-@import url('/Portafolio/css/presentacion-2.css');
-@import url('/Portafolio/css/presentacion-3.css');
-@import url('/Portafolio/css/calculator.css');
-@import url('/Portafolio/css/gallery.css');
-@import url('/Portafolio/css/list.css');
-@import url('/Portafolio/css/3d.css');
-@import url('/Portafolio/css/ringfire.css');
-@import url('/Portafolio/css/rubik.css');
-@import url('/Portafolio/css/loading-conic.css');
-@import url('/Portafolio/css/form.css');
+@import url('/css/etc.css');
+@import url('/css/presentacion-1.css');
+@import url('/css/header.css');
+@import url('/css/presentacion-2.css');
+@import url('/css/presentacion-3.css');
+@import url('/css/calculator.css');
+@import url('/css/gallery.css');
+@import url('/css/list.css');
+@import url('/css/form.css');
+@import url('/css/3d.css');
+@import url('/css/ringfire.css');
+@import url('/css/rubik.css');
+@import url('/css/loading-conic.css');
 
 
 
