--- a/layout/gallery.html
+++ b/layout/gallery.html
@@ -4,18 +4,18 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/Portafolio/css/style.css">
+    <link rel="stylesheet" href="/css/style.css">
     <title>Document</title>
 </head>
 <body>
   <div id="mySidenav" class="sidenav">
     <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
-    <a href="/Portafolio/index.html">Sobre Mi</a>
-    <a href="/Portafolio/layout/calculator.html">Calculadora</a>
-    <a href="/Portafolio/layout/gallery.html">Galeria</a>
-    <a href="/Portafolio/layout/listado.html">Listado</a>
-    <a href="/Portafolio/layout/3d.html">3D(only desktop) </a>
-    <a href="/Portafolio/layout/formulario.html">Contacto</a>
+    <a href="/index.html">Sobre Mi</a>
+    <a href="/layout/calculator.html">Calculadora</a>
+    <a href="/layout/gallery.html">Galeria</a>
+    <a href="/layout/listado.html">Listado</a>
+    <a href="/layout/3d.html">3D(only desktop) </a>
+    <a href="/layout/formulario.html">Contacto</a>
 
 </div>
 
@@ -23,7 +23,7 @@
     <div id="main">
         <span class="header" onclick="openNav()">&#9776; menu</span>
     </div>
-    <script src="/Portafolio/js/sidebar.js"></script>
+    <script src="/js/sidebar.js"></script>
 
     <div class="main">
 
@@ -43,21 +43,21 @@
         <div class="row">
           <div class="column cars">
             <div class="content">
-              <img src="/Portafolio/img/auto1.jpg" alt="cars" style="width:100%">
+              <img src="/img/auto1.jpg" alt="cars" style="width:100%">
               <h4>Automovil 1</h4>
               <p>Lorem ipsum dolor..</p>
             </div>
           </div>
           <div class="column cars">
             <div class="content">
-            <img src="/Portafolio/img/auto2.jpg" alt="cars" style="width:100%">
+            <img src="/img/auto2.jpg" alt="cars" style="width:100%">
               <h4>Automovil 2</h4>
               <p>Lorem ipsum dolor..</p>
             </div>
           </div>
           <div class="column cars">
             <div class="content">
-            <img src="/Portafolio/img/auto3.jpg" alt="cars" style="width:100%">
+            <img src="/img/auto3.jpg" alt="cars" style="width:100%">
               <h4>Automovil 3</h4>
               <p>Lorem ipsum dolor..</p>
             </div>
@@ -65,21 +65,21 @@
           
           <div class="column people">
             <div class="content">
-              <img src="/Portafolio/img/persona1.jpg" alt="People" style="width:100%">
+              <img src="/img/persona1.jpg" alt="People" style="width:100%">
               <h4>Persona 1</h4>
               <p>Lorem ipsum dolor..</p>
             </div>
           </div>
           <div class="column people">
             <div class="content">
-            <img src="/Portafolio/img/persona2.jpg" alt="People" style="width:100%">
+            <img src="/img/persona2.jpg" alt="People" style="width:100%">
               <h4>Persona 2</h4>
               <p>Lorem ipsum dolor..</p>
             </div>
           </div>
           <div class="column people">
             <div class="content">
-            <img src="/Portafolio/img/persona3.jpg" alt="People" style="width:100%">
+            <img src="/img/persona3.jpg" alt="People" style="width:100%">
               <h4>Persona 3</h4>
               <p>Lorem ipsum dolor..</p>
             </div>
@@ -87,35 +87,35 @@
         
           <div class="column people">
             <div class="content">
-              <img src="/Portafolio/img/persona4.jpg" alt="People" style="width:100%">
+              <img src="/img/persona4.jpg" alt="People" style="width:100%">
               <h4>Persona 4</h4>
               <p>Lorem ipsum dolor..</p>
             </div>
           </div>
           <div class="column people">
             <div class="content">
-            <img src="/Portafolio/img/persona5.jpg" alt="People" style="width:100%">
+            <img src="/img/persona5.jpg" alt="People" style="width:100%">
               <h4>Persona 5</h4>
               <p>Lorem ipsum dolor..</p>
             </div>
           </div>
           <div class="column mecanic">
             <div class="content">
-            <img src="/Portafolio/img/repuesto1.jpg" alt="Mechanic" style="width:100%">
+            <img src="/img/repuesto1.jpg" alt="Mechanic" style="width:100%">
               <h4>Repuestos</h4>
               <p>Lorem ipsum dolor..</p>
             </div>
           </div>
           <div class="column mecanic">
             <div class="content">
-            <img src="/Portafolio/img/repuesto2.jpg" alt="Mechanic" style="width:100%">
+            <img src="/img/repuesto2.jpg" alt="Mechanic" style="width:100%">
               <h4>Repuestos</h4>
               <p>Lorem ipsum dolor..</p>
             </div>
           </div>
           <div class="column mecanic">
             <div class="content">
-            <img src="/Portafolio/img/repuesto3.jpg" alt="Car" style="width:100%">
+            <img src="/img/repuesto3.jpg" alt="Car" style="width:100%">
               <h4>Repuestos</h4>
               <p>Lorem ipsum dolor..</p>
             </div>
@@ -126,7 +126,7 @@
         <!-- END MAIN -->
         </div>
 
-    <script src="/Portafolio/js/gallery.js"></script>
+    <script src="/js/gallery.js"></script>
     <footer class="footer">
     
 
