--- a/layout/listado.html
+++ b/layout/listado.html
@@ -5,26 +5,26 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/Portafolio/css/style.css">
+    <link rel="stylesheet" href="/css/style.css">
     <title>Listado</title>
 </head>
 
 <body>
     <div id="mySidenav" class="sidenav">
         <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
-        <a href="/Portafolio/index.html">Sobre Mi</a>
-        <a href="/Portafolio/layout/calculator.html">Calculadora</a>
-        <a href="/Portafolio/layout/gallery.html">Galeria</a>
-        <a href="/Portafolio/layout/listado.html">Listado</a>
-        <a href="/Portafolio/layout/3d.html">3D(only desktop) </a>
-        <a href="/Portafolio/layout/formulario.html">Contacto</a>
+        <a href="/index.html">Sobre Mi</a>
+        <a href="/layout/calculator.html">Calculadora</a>
+        <a href="/layout/gallery.html">Galeria</a>
+        <a href="/layout/listado.html">Listado</a>
+        <a href="/layout/3d.html">3D(only desktop) </a>
+        <a href="/layout/formulario.html">Contacto</a>
 
     </div>
 
     <div id="main">
         <span class="header" onclick="openNav()">&#9776; menu</span>
     </div>
-    <script src="/Portafolio/js/sidebar.js"></script>
+    <script src="/js/sidebar.js"></script>
     <div class="div-listado">
         <div id="myDIV" class="header-listado">
             <h2>Mi Listado</h2>
@@ -41,7 +41,7 @@
             <li>Ver una Peli</li>
         </ul>
         
-        <script src="/Portafolio/js/listado.js"></script>
+        <script src="/js/listado.js"></script>
     </div>
 
     <footer class="footer">
