--- a/layout/calculator.html
+++ b/layout/calculator.html
@@ -4,25 +4,25 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/css/style.css">
+    <link rel="stylesheet" href="/Portafolio/css/style.css">
     <title>Calculator</title>
 </head>
 
 <body>
     <div id="mySidenav" class="sidenav">
         <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
-        <a href="/index.html">Sobre Mi</a>
-        <a href="/layout/calculator.html">Calculadora</a>
-        <a href="/layout/gallery.html">Galeria</a>
-        <a href="/layout/listado.html">Listado</a>
-        <a href="/layout/3d.html">3D(only desktop) </a>
-        <a href="/layout/formulario.html">Contacto</a>
+        <a href="/Portafolio/index.html">Sobre Mi</a>
+        <a href="/Portafolio/layout/calculator.html">Calculadora</a>
+        <a href="/Portafolio/layout/gallery.html">Galeria</a>
+        <a href="/Portafolio/layout/listado.html">Listado</a>
+        <a href="/Portafolio/layout/3d.html">3D(only desktop) </a>
+        <a href="/Portafolio/layout/formulario.html">Contacto</a>
 
     </div>
     <div id="main">
         <span class="header" onclick="openNav()">&#9776; menu</span>
     </div>
-    <script src="/js/sidebar.js"></script>
+    <script src="/Portafolio/js/sidebar.js"></script>
     <section class="v">
         <div class="container-c">
             <div class="card">
@@ -94,7 +94,7 @@
         </div>
         </div>
     </section>
-    <script src="/js/calculator.js"></script>
+    <script src="/Portafolio/js/calculator.js"></script>
 
     <footer class="footer">
         <marquee class="marquee">
