--- a/layout/3d.html
+++ b/layout/3d.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/css/style.css">
+    <link rel="stylesheet" href="/Portafolio/css/style.css">
     <title>3D</title>
 </head>
 
@@ -93,7 +93,7 @@
                     </div>
                 </div>
             </div></div>
-            <div class="three center"><iframe class="port" src="/index.html"></iframe></div>
+            <div class="three center"><iframe class="port" src="/Portafolio/index.html"></iframe></div>
             <div class="four center">
                 <h1>Animación de Carga</h1>
                 <div class="container-conic-loader">
@@ -102,7 +102,7 @@
                 </div>
 
             </div>
-            <div class="five center"><a href="/index.html">Volver al Inicio</a></div>
+            <div class="five center"><a href="/Portafolio/index.html">Volver al Inicio</a></div>
             <!-- <div class="six center">
                 <h1>Six</h1>
                 <p>six</p>
