--- a/layout/formulario.html
+++ b/layout/formulario.html
@@ -5,26 +5,26 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/css/style.css">
+    <link rel="stylesheet" href="/Portafolio/css/style.css">
     <title>Formulario</title>
 </head>
 
 <body>
     <div id="mySidenav" class="sidenav">
         <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
-        <a href="/index.html">Sobre Mi</a>
-        <a href="/layout/calculator.html">Calculadora</a>
-        <a href="/layout/gallery.html">Galeria</a>
-        <a href="/layout/listado.html">Listado</a>
-        <a href="/layout/3d.html">3D(only desktop) </a>
-        <a href="/layout/formulario.html">Contacto</a>
+        <a href="/Portafolio/index.html">Sobre Mi</a>
+        <a href="/Portafolio/layout/calculator.html">Calculadora</a>
+        <a href="/Portafolio/layout/gallery.html">Galeria</a>
+        <a href="/Portafolio/layout/listado.html">Listado</a>
+        <a href="/Portafolio/layout/3d.html">3D(only desktop) </a>
+        <a href="/Portafolio/layout/formulario.html">Contacto</a>
     </div>
 
 
     <div id="main">
         <span class="header" onclick="openNav()">&#9776; menu</span>
     </div>
-    <script src="/js/sidebar.js"></script>
+    <script src="/Portafolio/js/sidebar.js"></script>
 
 
 
@@ -49,6 +49,14 @@
                     <input type="text" id="lname" name="lname" placeholder="Su Apellido..." required>
                 </section>
 
+                <section>
+                    <label for="email">
+                        <h3>Ingrese su e-mail</h3>
+                    </label>
+                    <input type="email" id="email" name="email" placeholder="Su email..." required>
+                </section>
+
+
                 <section class="textSection">
                     <label>
                         <h3> Ingrese Motivo de Contacto</h3>
@@ -62,7 +70,7 @@
 
 
                 <a href="mailto:franciscog941@gmail.com" id="sendid">sendid</a>
-                <script src="/js/form.js"></script>
+                <script src="/Portafolio/js/form.js"></script>
 
             </form>
         </div>
