--- a/css/calculator.css
+++ b/css/calculator.css
@@ -2,8 +2,8 @@
 .v{
     height: 100vh;
     width: 100vw;
-    padding: 0;
-    margin: 0;
+    padding: 2rem;
+    margin: 2rem;
 }
 .container-c{
 
