--- a/layout/calculator.html
+++ b/layout/calculator.html
@@ -23,7 +23,7 @@
         <span class="header" onclick="openNav()">&#9776; menu</span>
     </div>
     <script src="/Portafolio/js/sidebar.js"></script>
-    <section class="v">
+    <!-- <section class="v"> -->
         <div class="container-c">
             <div class="card">
                 <h1  class="h1-card">La Historia de la Calculadora</h1>
@@ -93,7 +93,7 @@
 
         </div>
         </div>
-    </section>
+    <!-- </section> -->
     <script src="/Portafolio/js/calculator.js"></script>
 
     <footer class="footer">
