--- a/css/style.css
+++ b/css/style.css
@@ -18,7 +18,7 @@
 *{
     margin: 0; 
     padding: 0 ;
-    font-family: 'Piazzolla', serif;
+    font-family: 'Piazzolla', 'Roboto';
     user-select: none;
     box-sizing: border-box;
 }
