--- a/css/style.css
+++ b/css/style.css
@@ -12,6 +12,7 @@
 @import url('/Portafolio/css/rubik.css');
 @import url('/Portafolio/css/loading-conic.css');
 @import url('/Portafolio/css/form.css');
+@import url('/Portafolio/css/3dbackground.css');
 
 
 
