--- a/css/3d.css
+++ b/css/3d.css
@@ -1,8 +1,8 @@
 
 .container-3d{
-    background: radial-gradient(rgb(0, 0, 0),rgb(36, 36, 36),rgb(34, 34, 34));
+    /* background: radial-gradient(rgba(0, 0, 0, 0.452),rgba(36, 36, 36, 0.459),rgba(34, 34, 34, 0.808)); */
     padding-left: 5vw;
-
+    /* padding-right: 15vw; */
     display: grid;
     align-items: center;
     height: 100vh;
@@ -18,30 +18,56 @@
 .wrapper-3d {
 
     margin: auto;
-    min-width: 80rem;
+    min-width: 20rem;
     max-width: 85rem;
     height: 70vh;
     background:linear-gradient(120deg, rgb(255, 255, 154), rgb(141, 132, 10), rgb(51, 48, 0));
     display: grid;
     grid-template-columns: repeat(3, 1fr);
     grid-gap: 0.5rem;
-    padding: 0.5rem;
+    padding: 0.8rem 1rem;
     border: solid 0.3rem black;
     grid-auto-rows: minmax(4rem, auto);
     transform-style: preserve-3d;
       
     transform:rotateY(30deg);
+
   }
   .one {
     border: solid 0.3rem black;
     grid-column: 1 ;
     grid-row: 1;
   }
+  .glitch1 {
+    position: absolute;
+    /* top: 2rem; */
+     left: 9%; 
+    text-align: center;
+    color: #fff;
+    font-size: 2em;
+    letter-spacing: 0.2rem;
+    font-family: 'Press Start 2P';
+    font-weight: 400;
+    /*Create overlap*/
+    
+    margin: auto;
+    /* line-height: 0; */
+    /*Animation*/
+    
+    animation: glitch1 2.5s infinite;
+  }
+  
+
   .two {
     border: solid 0.3rem black;
     grid-column: 3 / 4;
     grid-row: 1 / 3;
   }
+
+  .container-rubik{
+    transform: scale(0.6);
+  }
+
   .three {
       border: solid 0.3rem black;
     grid-column: 1/3;
@@ -52,6 +78,12 @@
     grid-column: 3;
     grid-row: 3/5;
   }
+
+  .container-conic-loader{
+    transform: scale(0.8) translateY(-3rem);
+  }
+
+
   .five {
     border: solid 0.3rem black;
     grid-column: 2;
@@ -59,7 +91,7 @@
   }
 
 .five a{
-  font-size: 3rem;
+  font-size: 2.5rem;
   font-weight: 800;
 }
 
@@ -133,3 +165,366 @@ color: aliceblue;
   resize: both;
 
 }  
+
+@media (min-width:100px) and (max-width:700px){
+
+  .container-3d{
+    /* background: radial-gradient(rgb(0, 0, 0),rgb(36, 36, 36),rgb(34, 34, 34)); */
+    /* padding-right: 5vw; */
+    /* margin-right: 15vw ; */
+    display: grid;
+    align-items: center;
+    height: 100vh;
+    perspective: 2000px;
+    overflow: visible;
+}
+
+.container-3d h1{
+  font-size: 1rem;
+}
+
+.container-3d p{
+  font-size: 0.8rem;
+}
+
+
+
+.titlee{
+  color: aliceblue;
+  position: absolute;
+  top: 5rem;
+  left:50%;
+}
+
+  .wrapper-3d {
+
+    margin: 4rem auto;
+    min-width: 5rem;
+    width: 30rem;
+    max-width: 75rem;
+    height: auto;
+    background:linear-gradient(120deg, rgb(255, 255, 154), rgb(141, 132, 10), rgb(51, 48, 0));
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    grid-gap: 0.5rem;
+    padding: 0.5rem;
+    border: solid 0.3rem black;
+    grid-auto-rows: minmax(3rem, auto);
+    transform-style: preserve-3d;
+      
+    transform:rotateY(30deg);
+
+  }
+
+  .one {
+    border: solid 0.3rem black;
+    grid-column: 1 ;
+    grid-row: 1;
+  }
+
+  .glitch1 {
+    position: absolute;
+    /* top: 2rem; */
+     left: 15%; 
+    text-align: center;
+    color: #fff;
+    font-size: 2.5em;
+    letter-spacing: 0.2rem;
+    font-family: 'Press Start 2P';
+    font-weight: 400;
+    /*Create overlap*/
+    
+    margin: auto;
+    /* line-height: 0; */
+    /*Animation*/
+    
+    animation: glitch1 2.5s infinite;
+  }
+
+  .two {
+    border: solid 0.3rem black;
+    grid-column: 1 / 3;
+    grid-row:  3/10;
+  }
+
+  .two h1, 
+  .four h1{
+    font-size: 3rem;
+  }
+  .three {
+      border: solid 0.3rem black;
+    grid-column: 1/3;
+    grid-row: 2 / 3;
+  }
+  .four {
+    border: solid 0.3rem black;
+    grid-column: 1/3;
+    grid-row: 10/15;
+  }
+  .five {
+    border: solid 0.3rem black;
+    grid-column: 2;
+    grid-row: 1;
+  }
+
+  .five a{
+    font-size: 1rem;
+    font-weight: 800;
+  }
+  
+  .five a:hover{
+  transform:
+  scale3d(1.2,1.2,1)
+  ;
+  transform-style: preserve-3d;
+  transition: 0.1s;
+  color: aliceblue;
+    
+  }
+  
+    .six {
+      border: solid 0.3rem black;
+      grid-column: 3;
+      grid-row: 4;
+    }
+    .seven {
+      border: solid 0.3rem black;
+      grid-column: 2;
+      grid-row: 2/4;
+    }
+  
+    .center{
+      overflow: hidden;
+        text-align: center;
+        display: grid;
+        align-items:center;
+        word-break: break-all;
+        padding: 0.3rem;
+        background:linear-gradient(-45deg,rgb(27, 27, 27),rgb(102, 53, 53));
+  
+    }
+    .center:hover{
+          border:solid 0.3rem white;
+          box-shadow: 0 0 2rem yellow;
+          transform:
+           translate3d(-3rem,0,9rem)
+           /* rotateY(-30deg) */
+           /* scale3d(1.2,1.2,1) */
+           ;
+          transform-style: preserve-3d;
+          transition: 2s;
+    }
+  
+    .center:active{
+     
+      transform:
+           translate3d(-3rem,0,9rem)
+           rotate3d(1,-20,1,15deg)
+           scale3d(1.2,1.2,1)
+           ;
+          transform-style: preserve-3d;
+          transition: 0.1s;
+    }
+  
+  .ring{
+    /* position: absolute; */
+    width: 100%;
+    height: 5rem;
+    
+  }
+  
+  
+  .port{
+    /* position: relative; */
+    width: 100%;
+    height: 30rem;
+    border: solid 0.4rem black;
+    resize: both;
+  
+  }  
+
+
+}
+
+@media (min-width:701px) and (max-width:1200px){
+  
+
+  /* .container-3d h1{
+    font-size: 3rem;
+  } */
+  
+  .container-3d p{
+    font-size: 1.2rem;
+  }
+  
+  
+  
+  .titlee{
+    color: aliceblue;
+    position: absolute;
+    top: 5rem;
+    left:50%;
+  }
+
+
+
+  .wrapper-3d {
+
+    margin: auto;
+    min-width: 10rem;
+    max-width: 85rem;
+    height: 70vh;
+    background:linear-gradient(120deg, rgb(255, 255, 154), rgb(141, 132, 10), rgb(51, 48, 0));
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    grid-gap: 0.5rem;
+    padding: 0.5rem;
+    border: solid 0.3rem black;
+    grid-auto-rows: minmax(4rem, auto);
+    transform-style: preserve-3d;
+      
+    transform:rotateY(30deg);
+
+  }
+  .one {
+    border: solid 0.3rem black;
+    grid-column: 1 ;
+    grid-row: 1;
+  }
+
+  .glitch1 {
+    position: absolute;
+    /* top: 2rem; */
+     left: 9%; 
+    text-align: center;
+    color: #fff;
+    font-size: 1.5rem;
+    letter-spacing: 0.2rem;
+    font-family: 'Press Start 2P';
+    font-weight: 400;
+    /*Create overlap*/
+    
+    margin: auto;
+    /* line-height: 0; */
+    /*Animation*/
+    
+    animation: glitch1 2.5s infinite;
+  }
+
+
+
+  .two {
+    border: solid 0.3rem black;
+    grid-column: 3 / 4;
+    grid-row: 1 / 3;
+  }
+
+  .two h1, 
+  .four h1{
+    font-size: 1.5rem;
+  }
+
+  .container-rubik{
+    /* margin: 5rem ; */
+    /* padding: 0  5rem 0; */
+    transform: scale(0.6);
+  }
+
+  .three {
+      border: solid 0.3rem black;
+    grid-column: 1/3;
+    grid-row: 2 / 5;
+  }
+  .four {
+    border: solid 0.3rem black;
+    grid-column: 3;
+    grid-row: 3/5;
+  }
+
+.container-conic-loader{
+  transform: scale(0.8) translateY(-4rem);
+}
+
+  .five {
+    border: solid 0.3rem black;
+    grid-column: 2;
+    grid-row: 1;
+  }
+
+.five a{
+  font-size: 1.2rem;
+  font-weight: 800;
+}
+
+.five a:hover{
+transform:
+scale3d(1.2,1.2,1)
+;
+transform-style: preserve-3d;
+transition: 0.1s;
+color: aliceblue;
+  
+}
+
+  .six {
+    border: solid 0.3rem black;
+    grid-column: 3;
+    grid-row: 4;
+  }
+  .seven {
+    border: solid 0.3rem black;
+    grid-column: 2;
+    grid-row: 2/4;
+  }
+
+  .center{
+    overflow: hidden;
+      text-align: center;
+      display: grid;
+      align-items:center;
+      word-break: break-all;
+      padding: 0.3rem;
+      background:linear-gradient(-45deg,rgb(27, 27, 27),rgb(102, 53, 53));
+
+  }
+  .center:hover{
+        border:solid 0.3rem white;
+        box-shadow: 0 0 2rem yellow;
+        transform:
+         translate3d(-3rem,0,9rem)
+         /* rotateY(-30deg) */
+         /* scale3d(1.2,1.2,1) */
+         ;
+        transform-style: preserve-3d;
+        transition: 2s;
+  }
+
+  .center:active{
+   
+    transform:
+         translate3d(-3rem,0,9rem)
+         rotate3d(1,-20,1,15deg)
+         scale3d(1.2,1.2,1)
+         ;
+        transform-style: preserve-3d;
+        transition: 0.1s;
+  }
+
+.ring{
+  /* position: absolute; */
+  width: 100%;
+  height: 5rem;
+  
+}
+
+
+.port{
+  /* position: relative; */
+  width: 100%;
+  height: 30rem;
+  border: solid 0.4rem black;
+  resize: both;
+
+} 
+
+}
