--- a/css/etc.css
+++ b/css/etc.css
@@ -2,22 +2,22 @@
     width: 100%;
     height: 70%;
     margin: 30vh auto;
-    background-color:black ;
+
   }
 
 .glitch1 {
     position: absolute;
-    top: 2rem;
-    left: 13%;
+    /* top: 2rem; */
+     left: 5%; 
     text-align: center;
     color: #fff;
-    font-size: 5em;
+    font-size: 2.5em;
     letter-spacing: 0.2rem;
     font-family: 'Press Start 2P';
     font-weight: 400;
     /*Create overlap*/
     
-    margin: 0;
+    margin: auto;
     /* line-height: 0; */
     /*Animation*/
     
