--- a/layout/3d.html
+++ b/layout/3d.html
@@ -13,13 +13,13 @@
 
 
     <div class="container-3d">
-        <h1 class="glitch1">La Práctica hace al Maestro</h1>
-        <h1 class="glitch1">La Práctica hace al Maestro</h1>
-        <h1 class="glitch1">La Práctica hace al Maestro</h1>
+
         <div class="wrapper-3d">
             <div class="one center">
-                <h1>Portafolio en 3D</h1>
-                <p>Just why I can</p>
+                <h1 class="glitch1" >Portafolio </br> en 3D</h1>
+                <h1 class="glitch1" >Portafolio</br> en 3D</h1>
+                <h1 class="glitch1" >Portafolio </br>en 3D</h1>
+                <!-- <p>Just why I can</p> -->
             </div>
             <div class="two center">
                 <h1>Cubo Rubik</h1>
