--- a/layout/3d.html
+++ b/layout/3d.html
@@ -95,7 +95,7 @@
             </div></div>
             <div class="three center"><iframe class="port" src="/Portafolio/index.html"></iframe></div>
             <div class="four center">
-                <h1>Animación de Carga</h1>
+                <h1>Animación <br>de Carga</h1>
                 <div class="container-conic-loader">
                     <div class="conic-loader">
                     </div>
