--- a/css/3d.css
+++ b/css/3d.css
@@ -1,7 +1,7 @@
 
 .container-3d{
     /* background: radial-gradient(rgba(0, 0, 0, 0.452),rgba(36, 36, 36, 0.459),rgba(34, 34, 34, 0.808)); */
-    padding-left: 5vw;
+    /* padding-left: 2vw; */
     /* padding-right: 15vw; */
     display: grid;
     align-items: center;
@@ -9,45 +9,51 @@
     perspective: 2000px;
     overflow: visible;
 }
-.titlee{
+/* .titlee{
   color: aliceblue;
   position: absolute;
   top: 5rem;
   left:50%;
-}
+} */
 .wrapper-3d {
-
+    border-radius: 2rem;
     margin: auto;
     min-width: 20rem;
     max-width: 85rem;
     height: 70vh;
-    background:linear-gradient(120deg, rgb(255, 255, 154), rgb(141, 132, 10), rgb(51, 48, 0));
+    background:linear-gradient(120deg
+    , rgba(0, 183, 255, 0.1)
+    , rgba(14, 135, 184, 0.1)
+    , rgba(37, 86, 105, 0.1)
+    );
+    box-shadow: 0 0 0.35rem white;
     display: grid;
     grid-template-columns: repeat(3, 1fr);
-    grid-gap: 0.5rem;
-    padding: 0.8rem 1rem;
-    border: solid 0.3rem black;
+    grid-gap: 1rem;
+    padding: 0.5rem;
+    /* border: solid 0.3rem black; */
     grid-auto-rows: minmax(4rem, auto);
     transform-style: preserve-3d;
       
-    transform:rotateY(30deg);
+    transform:rotateY(40deg);
 
   }
   .one {
-    border: solid 0.3rem black;
     grid-column: 1 ;
     grid-row: 1;
   }
   .glitch1 {
     position: absolute;
     /* top: 2rem; */
-     left: 9%; 
+     left: 25%; 
     text-align: center;
-    color: #fff;
-    font-size: 2em;
+    color: rgb(0, 0, 0);
+    text-shadow: 0 0 0 rgba(0, 0, 0, 0);
+
+    font-size: 1.7em;
     letter-spacing: 0.2rem;
     font-family: 'Press Start 2P';
-    font-weight: 400;
+    font-weight: 600;
     /*Create overlap*/
     
     margin: auto;
@@ -59,9 +65,15 @@
   
 
   .two {
-    border: solid 0.3rem black;
+
     grid-column: 3 / 4;
     grid-row: 1 / 3;
+  }
+
+  .two h1, 
+  .four h1{
+    font-size: 2rem;
+    text-shadow: 0.15rem 0.15rem 0 rgba(0, 0, 0, 0.25);
   }
 
   .container-rubik{
@@ -69,12 +81,12 @@
   }
 
   .three {
-      border: solid 0.3rem black;
+
     grid-column: 1/3;
     grid-row: 2 / 5;
   }
   .four {
-    border: solid 0.3rem black;
+
     grid-column: 3;
     grid-row: 3/5;
   }
@@ -85,7 +97,7 @@
 
 
   .five {
-    border: solid 0.3rem black;
+
     grid-column: 2;
     grid-row: 1;
   }
@@ -101,29 +113,32 @@ scale3d(1.2,1.2,1)
 ;
 transform-style: preserve-3d;
 transition: 0.1s;
-color: aliceblue;
+color: rgb(0, 0, 0);
   
 }
 
   .six {
-    border: solid 0.3rem black;
+
     grid-column: 3;
     grid-row: 4;
   }
   .seven {
-    border: solid 0.3rem black;
+
     grid-column: 2;
     grid-row: 2/4;
   }
 
   .center{
-    overflow: hidden;
+    border-radius: 2rem;
+    /* overflow: hidden; */
       text-align: center;
       display: grid;
       align-items:center;
       word-break: break-all;
       padding: 0.3rem;
-      background:linear-gradient(-45deg,rgb(27, 27, 27),rgb(102, 53, 53));
+      backdrop-filter: blur(0.2rem);
+      background:linear-gradient(-45deg,rgba(255, 255, 255, 0.1)
+      ,rgba(255, 255, 255, 0.1));
 
   }
   .center:hover{
@@ -137,7 +152,7 @@ color: aliceblue;
         transform-style: preserve-3d;
         transition: 2s;
   }
-
+/* 
   .center:active{
    
     transform:
@@ -147,22 +162,18 @@ color: aliceblue;
          ;
         transform-style: preserve-3d;
         transition: 0.1s;
-  }
+  } */
 
-.ring{
-  /* position: absolute; */
-  width: 100%;
-  height: 5rem;
-  
-}
+
 
 
 .port{
   /* position: relative; */
   width: 100%;
   height: 30rem;
-  border: solid 0.4rem black;
-  resize: both;
+  border: solid 0.1rem rgb(255, 255, 255);
+  /* resize: both; */
+  border-radius: 2rem;
 
 }  
 
@@ -177,11 +188,11 @@ color: aliceblue;
     height: 100vh;
     perspective: 2000px;
     overflow: visible;
+    margin-bottom: 65rem;
 }
 
-.container-3d h1{
-  font-size: 1rem;
-}
+
+
 
 .container-3d p{
   font-size: 0.8rem;
@@ -200,15 +211,14 @@ color: aliceblue;
 
     margin: 4rem auto;
     min-width: 5rem;
-    width: 30rem;
+    width: 22rem;
     max-width: 75rem;
     height: auto;
-    background:linear-gradient(120deg, rgb(255, 255, 154), rgb(141, 132, 10), rgb(51, 48, 0));
+
     display: grid;
     grid-template-columns: repeat(2, 1fr);
     grid-gap: 0.5rem;
     padding: 0.5rem;
-    border: solid 0.3rem black;
     grid-auto-rows: minmax(3rem, auto);
     transform-style: preserve-3d;
       
@@ -217,7 +227,6 @@ color: aliceblue;
   }
 
   .one {
-    border: solid 0.3rem black;
     grid-column: 1 ;
     grid-row: 1;
   }
@@ -225,10 +234,10 @@ color: aliceblue;
   .glitch1 {
     position: absolute;
     /* top: 2rem; */
-     left: 15%; 
+     left: 30%; 
     text-align: center;
-    color: #fff;
-    font-size: 2.5em;
+    font-size: 1.2rem;
+    text-shadow: 0.15rem 0.15rem 0 rgba(0, 0, 0, 0.25);
     letter-spacing: 0.2rem;
     font-family: 'Press Start 2P';
     font-weight: 400;
@@ -242,7 +251,6 @@ color: aliceblue;
   }
 
   .two {
-    border: solid 0.3rem black;
     grid-column: 1 / 3;
     grid-row:  3/10;
   }
@@ -250,19 +258,17 @@ color: aliceblue;
   .two h1, 
   .four h1{
     font-size: 3rem;
+    text-shadow: 0.15rem 0.15rem 0 rgba(0, 0, 0, 0.25);
   }
   .three {
-      border: solid 0.3rem black;
     grid-column: 1/3;
     grid-row: 2 / 3;
   }
   .four {
-    border: solid 0.3rem black;
     grid-column: 1/3;
     grid-row: 10/15;
   }
   .five {
-    border: solid 0.3rem black;
     grid-column: 2;
     grid-row: 1;
   }
@@ -283,12 +289,10 @@ color: aliceblue;
   }
   
     .six {
-      border: solid 0.3rem black;
       grid-column: 3;
       grid-row: 4;
     }
     .seven {
-      border: solid 0.3rem black;
       grid-column: 2;
       grid-row: 2/4;
     }
@@ -300,7 +304,6 @@ color: aliceblue;
         align-items:center;
         word-break: break-all;
         padding: 0.3rem;
-        background:linear-gradient(-45deg,rgb(27, 27, 27),rgb(102, 53, 53));
   
     }
     .center:hover{
@@ -315,7 +318,7 @@ color: aliceblue;
           transition: 2s;
     }
   
-    .center:active{
+    /* .center:active{
      
       transform:
            translate3d(-3rem,0,9rem)
@@ -324,22 +327,14 @@ color: aliceblue;
            ;
           transform-style: preserve-3d;
           transition: 0.1s;
-    }
-  
-  .ring{
-    /* position: absolute; */
-    width: 100%;
-    height: 5rem;
-    
-  }
+    } */
   
   
   .port{
     /* position: relative; */
     width: 100%;
     height: 30rem;
-    border: solid 0.4rem black;
-    resize: both;
+    /* resize: both; */
   
   }  
 
@@ -358,13 +353,7 @@ color: aliceblue;
   }
   
   
-  
-  .titlee{
-    color: aliceblue;
-    position: absolute;
-    top: 5rem;
-    left:50%;
-  }
+ 
 
 
 
@@ -374,12 +363,10 @@ color: aliceblue;
     min-width: 10rem;
     max-width: 85rem;
     height: 70vh;
-    background:linear-gradient(120deg, rgb(255, 255, 154), rgb(141, 132, 10), rgb(51, 48, 0));
     display: grid;
     grid-template-columns: repeat(3, 1fr);
     grid-gap: 0.5rem;
     padding: 0.5rem;
-    border: solid 0.3rem black;
     grid-auto-rows: minmax(4rem, auto);
     transform-style: preserve-3d;
       
@@ -387,7 +374,6 @@ color: aliceblue;
 
   }
   .one {
-    border: solid 0.3rem black;
     grid-column: 1 ;
     grid-row: 1;
   }
@@ -395,9 +381,8 @@ color: aliceblue;
   .glitch1 {
     position: absolute;
     /* top: 2rem; */
-     left: 9%; 
+    left: 25%; 
     text-align: center;
-    color: #fff;
     font-size: 1.5rem;
     letter-spacing: 0.2rem;
     font-family: 'Press Start 2P';
@@ -414,7 +399,6 @@ color: aliceblue;
 
 
   .two {
-    border: solid 0.3rem black;
     grid-column: 3 / 4;
     grid-row: 1 / 3;
   }
@@ -422,6 +406,7 @@ color: aliceblue;
   .two h1, 
   .four h1{
     font-size: 1.5rem;
+    text-shadow: 0.15rem 0.15rem 0 rgba(0, 0, 0, 0.25);
   }
 
   .container-rubik{
@@ -431,12 +416,12 @@ color: aliceblue;
   }
 
   .three {
-      border: solid 0.3rem black;
+
     grid-column: 1/3;
     grid-row: 2 / 5;
   }
   .four {
-    border: solid 0.3rem black;
+
     grid-column: 3;
     grid-row: 3/5;
   }
@@ -446,7 +431,7 @@ color: aliceblue;
 }
 
   .five {
-    border: solid 0.3rem black;
+
     grid-column: 2;
     grid-row: 1;
   }
@@ -467,24 +452,23 @@ color: aliceblue;
 }
 
   .six {
-    border: solid 0.3rem black;
+
     grid-column: 3;
     grid-row: 4;
   }
   .seven {
-    border: solid 0.3rem black;
+
     grid-column: 2;
     grid-row: 2/4;
   }
 
   .center{
-    overflow: hidden;
+      overflow: hidden;
       text-align: center;
       display: grid;
       align-items:center;
       word-break: break-all;
       padding: 0.3rem;
-      background:linear-gradient(-45deg,rgb(27, 27, 27),rgb(102, 53, 53));
 
   }
   .center:hover{
@@ -522,7 +506,6 @@ color: aliceblue;
   /* position: relative; */
   width: 100%;
   height: 30rem;
-  border: solid 0.4rem black;
   resize: both;
 
 } 
