--- a/layout/gallery.html
+++ b/layout/gallery.html
@@ -44,21 +44,21 @@
         <div class="row">
           <div class="column cars">
             <div class="content">
-              <img src="/Portafolio/img/auto1.jpg" alt="cars" style="width:100%">
+              <img src="/Portafolio/img/auto1.jpg" alt="cars" >
               <h4>Automovil 1</h4>
               <p>Lorem ipsum dolor..</p>
             </div>
           </div>
           <div class="column cars">
             <div class="content">
-            <img src="/Portafolio/img/auto2.jpg" alt="cars" style="width:100%">
+            <img src="/Portafolio/img/auto2.jpg" alt="cars" >
               <h4>Automovil 2</h4>
               <p>Lorem ipsum dolor..</p>
             </div>
           </div>
           <div class="column cars">
             <div class="content">
-            <img src="/Portafolio/img/auto3.jpg" alt="cars" style="width:100%">
+            <img src="/Portafolio/img/auto3.jpg" alt="cars" >
               <h4>Automovil 3</h4>
               <p>Lorem ipsum dolor..</p>
             </div>
@@ -66,21 +66,21 @@
           
           <div class="column people">
             <div class="content">
-              <img src="/Portafolio/img/persona1.jpg" alt="People" style="width:100%">
+              <img src="/Portafolio/img/persona1.jpg" alt="People" >
               <h4>Persona 1</h4>
               <p>Lorem ipsum dolor..</p>
             </div>
           </div>
           <div class="column people">
             <div class="content">
-            <img src="/Portafolio/img/persona2.jpg" alt="People" style="width:100%">
+            <img src="/Portafolio/img/persona2.jpg" alt="People" >
               <h4>Persona 2</h4>
               <p>Lorem ipsum dolor..</p>
             </div>
           </div>
           <div class="column people">
             <div class="content">
-            <img src="/Portafolio/img/persona3.jpg" alt="People" style="width:100%">
+            <img src="/Portafolio/img/persona3.jpg" alt="People" >
               <h4>Persona 3</h4>
               <p>Lorem ipsum dolor..</p>
             </div>
@@ -88,35 +88,35 @@
         
           <div class="column people">
             <div class="content">
-              <img src="/Portafolio/img/persona4.jpg" alt="People" style="width:100%">
+              <img src="/Portafolio/img/persona4.jpg" alt="People" >
               <h4>Persona 4</h4>
               <p>Lorem ipsum dolor..</p>
             </div>
           </div>
           <div class="column people">
             <div class="content">
-            <img src="/Portafolio/img/persona5.jpg" alt="People" style="width:100%">
+            <img src="/Portafolio/img/persona5.jpg" alt="People" >
               <h4>Persona 5</h4>
               <p>Lorem ipsum dolor..</p>
             </div>
           </div>
           <div class="column mecanic">
             <div class="content">
-            <img src="/Portafolio/img/repuesto1.jpg" alt="Mechanic" style="width:100%">
+            <img src="/Portafolio/img/repuesto1.jpg" alt="Mechanic" >
               <h4>Repuestos</h4>
               <p>Lorem ipsum dolor..</p>
             </div>
           </div>
           <div class="column mecanic">
             <div class="content">
-            <img src="/Portafolio/img/repuesto2.jpg" alt="Mechanic" style="width:100%">
+            <img src="/Portafolio/img/repuesto2.jpg" alt="Mechanic" >
               <h4>Repuestos</h4>
               <p>Lorem ipsum dolor..</p>
             </div>
           </div>
           <div class="column mecanic">
             <div class="content">
-            <img src="/Portafolio/img/repuesto3.jpg" alt="Car" style="width:100%">
+            <img src="/Portafolio/img/repuesto3.jpg" alt="Car" >
               <h4>Repuestos</h4>
               <p>Lorem ipsum dolor..</p>
             </div>
