--- a/css/3d.css
+++ b/css/3d.css
@@ -22,9 +22,9 @@
     max-width: 85rem;
     height: 70vh;
     background:linear-gradient(120deg
-    , rgba(0, 183, 255, 0.1)
-    , rgba(14, 135, 184, 0.1)
-    , rgba(37, 86, 105, 0.1)
+    , rgba(0, 183, 255, 0.15)
+    , rgba(14, 135, 184, 0.15)
+    , rgba(37, 86, 105, 0.15)
     );
     box-shadow: 0 0 0.35rem white;
     display: grid;
@@ -137,8 +137,9 @@ color: rgb(0, 0, 0);
       word-break: break-all;
       padding: 0.3rem;
       backdrop-filter: blur(0.2rem);
-      background:linear-gradient(-45deg,rgba(255, 255, 255, 0.1)
-      ,rgba(255, 255, 255, 0.1));
+      background:linear-gradient(-45deg
+      ,rgba(255, 255, 255, 0.2)
+      ,rgba(255, 255, 255, 0.2));
 
   }
   .center:hover{
@@ -234,9 +235,9 @@ color: rgb(0, 0, 0);
   .glitch1 {
     position: absolute;
     /* top: 2rem; */
-     left: 30%; 
+     left: 22%; 
     text-align: center;
-    font-size: 1.2rem;
+    font-size: 1rem;
     text-shadow: 0.15rem 0.15rem 0 rgba(0, 0, 0, 0.25);
     letter-spacing: 0.2rem;
     font-family: 'Press Start 2P';
@@ -381,7 +382,7 @@ color: rgb(0, 0, 0);
   .glitch1 {
     position: absolute;
     /* top: 2rem; */
-    left: 25%; 
+    left: 20%; 
     text-align: center;
     font-size: 1.5rem;
     letter-spacing: 0.2rem;
@@ -483,7 +484,7 @@ color: aliceblue;
         transition: 2s;
   }
 
-  .center:active{
+  /* .center:active{
    
     transform:
          translate3d(-3rem,0,9rem)
@@ -492,7 +493,7 @@ color: aliceblue;
          ;
         transform-style: preserve-3d;
         transition: 0.1s;
-  }
+  } */
 
 .ring{
   /* position: absolute; */
