--- a/layout/3d.html
+++ b/layout/3d.html
@@ -12,9 +12,9 @@
 <body>
 
 
-    <div class="container-3d">
+    <div class="container-3d animado-inicio">
 
-        <div class="wrapper-3d">
+        <div class="wrapper-3d ">
             <div class="one center">
                 <h1 class="glitch1" >Portafolio </br> en 3D</h1>
                 <h1 class="glitch1" >Portafolio</br> en 3D</h1>
