--- a/layout/3dbackground.html
+++ b/layout/3dbackground.html
@@ -14,9 +14,9 @@
     
 
 
-    <section class="section-pattern">
+    <section class="section-pattern  animado-inicio">
 
-        <div class="inner-float">
+        <div class="inner-float  animado-inicio">
             <div class="ddb">
                 <div class="drop-glass-3d">
                     <div id="foto1">
@@ -45,6 +45,16 @@
             <div class="face face2"></div>
         </div>
     </section>
+
+    <footer class="footer">
+
+        <marquee class="footer-marquee">
+            <p class="p-footer">Hecho con &#x1F497 por @Francisco Guerra - Hecho con &#x1F497 por @Francisco Guerra - Hecho con &#x1F497 por @Francisco Guerra - Hecho con &#x1F497 por @Francisco Guerra -
+                Hecho con
+                &#x1F497 por @Francisco Guerra</p>
+        </marquee>
+
+    </footer>
 </body>
 
 </html>
