--- a/layout/calculator.html
+++ b/layout/calculator.html
@@ -26,7 +26,7 @@
     <script src="/Portafolio/js/sidebar.js"></script>
     <!-- <section class="v"> -->
         <div class="container-c">
-            <div class="card">
+            <div class="card animado-inicio">
                 <h1  class="h1-card">La Historia de la Calculadora</h1>
                 <p class="parrafo"  style="initial-letter: capitalize;">
                     En 1623, el alemán Wilhelm Schickard fue quien creó el primer dispositivo capaz de realizar operaciones aritméticas.</br>
@@ -64,7 +64,7 @@
                     A finales del siglo XX, gracias a tecnologías como la del Sensor CMOS(sensor que detecta la luz) y de paneles solares, salieron al mercado calculadoras programables o sin necesidad de pilas. El avance continuo de las tecnologías ha permitido mejorar estos aparatos añadiendo derivadas, integrales, ecuaciones diferenciales y todo tipo de operaciones, llevando las matemáticas a nuestros bolsillos y haciendo nuestras vidas más fáciles.
                 </p>
             </div>
-            <div class="container-calculator">
+            <div class="container-calculator animado-inicio">
                 <p>made in chile</p>
                 <div id="display" class="display"></div>
                 <div class="buttons">
@@ -98,11 +98,14 @@
     <script src="/Portafolio/js/calculator.js"></script>
 
     <footer class="footer">
-        <marquee class="marquee">
-            <p class="p-footer">Hecho con &#x1F497 por @Francisco Guerra - Hecho con &#x1F497 por @Francisco Guerra - Hecho con
+
+        <marquee class="footer-marquee">
+            <p class="p-footer">Hecho con &#x1F497 por @Francisco Guerra - Hecho con &#x1F497 por @Francisco Guerra - Hecho con &#x1F497 por @Francisco Guerra - Hecho con &#x1F497 por @Francisco Guerra -
+                Hecho con
                 &#x1F497 por @Francisco Guerra</p>
         </marquee>
-</footer>
+
+    </footer>
 </body>
 
 </html>
