--- a/layout/formulario.html
+++ b/layout/formulario.html
@@ -31,7 +31,7 @@
 
 
 
-    <div class="container-form">
+    <div class="container-form animado-inicio">
         <div class="form">
 
             <form action="" method="POST" id="form">
@@ -68,7 +68,15 @@
             </form>
         </div>
     </div>
+    <footer class="footer">
 
+        <marquee class="footer-marquee">
+            <p class="p-footer">Hecho con &#x1F497 por @Francisco Guerra - Hecho con &#x1F497 por @Francisco Guerra - Hecho con &#x1F497 por @Francisco Guerra - Hecho con &#x1F497 por @Francisco Guerra -
+                Hecho con
+                &#x1F497 por @Francisco Guerra</p>
+        </marquee>
+
+    </footer>
 
 
 </body>
