--- a/layout/listado.html
+++ b/layout/listado.html
@@ -26,7 +26,7 @@
         <span class="header" onclick="openNav()">&#9776; menu</span>
     </div>
     <script src="/Portafolio/js/sidebar.js"></script>
-    <div class="div-listado">
+    <div class="div-listado animado-inicio">
         <div id="myDIV" class="header-listado">
             <h2>Mi Listado</h2>
             <input type="text" id="myInput" placeholder="Tarea....">
@@ -46,14 +46,14 @@
     </div>
 
     <footer class="footer">
-        
 
-        <div>
-            <marquee><p>Hecho con &#x1F497 por @Francisco Guerra - Hecho con &#x1F497 por @Francisco Guerra - Hecho con &#x1F497 por @Francisco Guerra</p>
+        <marquee class="footer-marquee">
+            <p class="p-footer">Hecho con &#x1F497 por @Francisco Guerra - Hecho con &#x1F497 por @Francisco Guerra - Hecho con &#x1F497 por @Francisco Guerra - Hecho con &#x1F497 por @Francisco Guerra -
+                Hecho con
+                &#x1F497 por @Francisco Guerra</p>
+        </marquee>
 
-            </marquee>
-        </div>
-    </footer>   
+    </footer>  
 
 </body>
 
