--- a/css/3dbackground.css
+++ b/css/3dbackground.css
@@ -465,10 +465,10 @@
 .drop-glass-3d:before{
   content: ' ';
   position: absolute;
-  top: 55px;
-  left: 20px;
-  width: 30px;
-  height: 30px;
+  top: 4rem;
+  left: 1rem;
+  width: 1.5rem;
+  height: 1.5rem;
   border-radius: 50%;
   box-shadow: inset 10px 10px 20px rgb(255, 255, 255);
   transform: skewX(-10deg);
@@ -576,10 +576,10 @@
 .drop-glass-3d:before{
   content: ' ';
   position: absolute;
-  top: 55px;
-  left: 20px;
-  width: 30px;
-  height: 30px;
+  top: 4rem;
+  left: 1.5rem;
+  width: 2rem;
+  height: 2rem;
   border-radius: 50%;
   box-shadow: inset 10px 10px 20px rgb(255, 255, 255);
   transform: skewX(-10deg);
@@ -588,10 +588,10 @@
 .drop-glass-3d:after{
   content: ' ';
   position: absolute;
-  top: 25px;
-  left: 40px;
-  width: 10px;
-  height: 10px;
+  top: 1.3rem;
+  left: 4rem;
+  width: 1rem;
+  height: 1rem;
   border-radius: 50%;
   box-shadow: inset 5px 5px 15px rgb(255, 255, 255);
   transform: skewX(-10deg);
