--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Piazzolla:wght@300&display=swap');
+@import url('/Portafolio/css/header.css');
 @import url('/Portafolio/css/etc.css');
 @import url('/Portafolio/css/presentacion-1.css');
-@import url('/Portafolio/css/header.css');
 @import url('/Portafolio/css/presentacion-2.css');
 @import url('/Portafolio/css/presentacion-3.css');
 @import url('/Portafolio/css/calculator.css');
@@ -13,12 +13,13 @@
 @import url('/Portafolio/css/loading-conic.css');
 @import url('/Portafolio/css/form.css');
 @import url('/Portafolio/css/3dbackground.css');
-
+@import url('/Portafolio/css/monitor.css');
+@import url('/Portafolio/css/animar.css');
 
 
 *{
     margin: 0; 
-    padding: 0 ;
+    padding: 0;
     font-family: 'Piazzolla', 'Roboto';
     user-select: none;
     box-sizing: border-box;
@@ -54,7 +55,7 @@ hr{
   vertical-align: center;
 }
 
-.marquee{
+.footer-marquee{
   width: 100%;
   /* height: 5vh; */
   background: rgba(255, 255, 255, 0.473);
