--- a/layout/gallery.html
+++ b/layout/gallery.html
@@ -26,7 +26,7 @@
     </div>
     <script src="/Portafolio/js/sidebar.js"></script>
 
-    <div class="main">
+    <div class="main animado-inicio">
 
         <h1>Francisco Guerra</h1>
         <hr>
@@ -129,13 +129,13 @@
 
     <script src="/Portafolio/js/gallery.js"></script>
     <footer class="footer">
-    
 
-      <div>
-          <marquee><p>Hecho con &#x1F497 por @Francisco Guerra - Hecho con &#x1F497 por @Francisco Guerra - Hecho con &#x1F497 por @Francisco Guerra</p>
+      <marquee class="footer-marquee">
+          <p class="p-footer">Hecho con &#x1F497 por @Francisco Guerra - Hecho con &#x1F497 por @Francisco Guerra - Hecho con &#x1F497 por @Francisco Guerra - Hecho con &#x1F497 por @Francisco Guerra -
+              Hecho con
+              &#x1F497 por @Francisco Guerra</p>
+      </marquee>
 
-          </marquee>
-      </div>
   </footer>
 </body>
 </html>
