--- a/layout/3dbackground.html
+++ b/layout/3dbackground.html
@@ -10,6 +10,41 @@
 </head>
 
 <body>
+    <div id="mySidenav" class="sidenav">
+        <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
+
+        <!-- <div class="switch-mode">
+
+            <button class="darkModeSwitch" id="switch">
+                <span>
+                    <ion-icon name="sunny-outline"></ion-icon>
+                </span>
+                <span>
+                    <ion-icon name="moon-outline"></ion-icon>
+                </span>
+        </div>
+         -->
+
+        <a href="/Portafolio/index.html">Sobre Mi</a>
+        <a href="/Portafolio/layout/calculator.html">Calculadora</a>
+        <a href="/Portafolio/layout/gallery.html">Galeria</a>
+        <a href="/Portafolio/layout/listado.html">Listado</a>
+        <a href="/Portafolio/layout/3d.html">3D(only desktop) </a>
+        <a href="/Portafolio/layout/3dbackground.html">No hay vuelta atras</a>
+        <a href="/Portafolio/layout/formulario.html">Contacto</a>
+
+        
+    </div>
+
+
+    <div id="main">
+        <span class="header" onclick="openNav()">&#9776; menu</span>
+    </div>
+
+    <script type="text/javascript" src="/Portafolio/js/sidebar.js"></script>
+
+
+
 
     
 
