--- a/css/presentacion-3.css
+++ b/css/presentacion-3.css
@@ -1,13 +1,13 @@
 .presentacion-3{
-    max-width: 70rem;
-    margin: 0.5rem auto 1.5rem auto;
+    max-width: 100vw;
+    /* margin: 0.5rem auto 1.5rem auto; */
     background-image: repeating-linear-gradient(-44deg,
     transparent, transparent 35px,
      rgb(255, 255, 255) 35px,
       rgb(255, 255, 255) 70px);
-    padding:0.5rem;
+    /* padding:0.5rem; */
     perspective: 1000px; 
-
+    height: 100vh;
 }
   
 
@@ -17,8 +17,11 @@
 
 display: none;
 }
-img {
+.img-slide {
     vertical-align: middle;
+    height: 100vh;
+    width:100%;
+    object-fit: cover;
 }
   
 /* Slideshow container */
@@ -26,6 +29,7 @@ img {
 max-width: 100%;
 position: relative;
 margin: auto;
+
 }
   
 .slideshow-container:hover{
@@ -43,7 +47,7 @@ transition: 1s;
     margin-top: -22px;
     color: white;
     font-weight: bold;
-    font-size: 18px;
+    font-size: 3rem;
     transition: 0.6s ease;
     border-radius: 0 3px 3px 0;
     user-select: none;
@@ -116,7 +120,7 @@ transition: 1s;
   
   /* On smaller screens, decrease text size */
   @media only screen and (max-width: 300px) {
-    .prev, .next,.text {font-size: 0.8rem}
+    .prev, .next,.text {font-size: 1.3rem}
   }
   
   
