--- a/css/style.css
+++ b/css/style.css
@@ -27,7 +27,7 @@
 body{
     padding: 0 0 0 0 ;
     margin: 0 0 0 0;
-    background: linear-gradient(0deg,rgba(83, 5, 2, 0.7),rgba(8, 47, 63, 0.808),rgba(13, 95, 102, 0.7),rgba(83, 5, 2, 0.7));
+    background: linear-gradient(0deg,rgba(255, 0, 0, 0.3),rgba(0, 119, 255, 0.5),rgba(0, 119, 255, 0.5),rgba(255, 0, 0, 0.3));
     background-size: 300% 300%;
     animation: backgroundAnimate 10s linear infinite;
     transition: background-color .5s;
@@ -53,7 +53,7 @@ hr{
 body.dark{
   padding: 0 0 0 0 ;
     margin: 0 0 0 0;
-    background: linear-gradient(0deg,rgba(255, 0, 0, 0.3),rgba(0, 119, 255, 0.5),rgba(0, 119, 255, 0.5),rgba(255, 0, 0, 0.3));
+    background: linear-gradient(0deg,rgba(83, 5, 2, 0.7),rgba(8, 47, 63, 0.808),rgba(13, 95, 102, 0.7),rgba(83, 5, 2, 0.7));
     background-size: 300% 300%;
     animation: backgroundAnimate 10s linear infinite;
     transition: background-color .5s;
@@ -61,17 +61,18 @@ body.dark{
 }
 
 .switch-mode{
-  /* display: flex; */
+
   height: 2rem;
   width: 100%;
-  /* margin:auto; */
-  /* text-align: center; */
-  justify-content: left;
-  padding-left: 1.5rem;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+
 }
 
 .darkModeSwitch{
-  background: #3494b1;
+  
+  background: #fdd384;
   display:flex;
   position: relative;
   cursor: pointer;
@@ -93,7 +94,7 @@ body.dark{
 
 .darkModeSwitch::after{
   display:block;
-  background: #fffbf5;
+  background: #f5f9ff;
   width: 2rem;
   height: 2rem;
   position: absolute;
@@ -107,15 +108,32 @@ body.dark{
 }
 
 .darkModeSwitch.active{
-  background: #fdd384;
+  background: #1b5fa0;
 }
 .darkModeSwitch.active::after{
   left:unset;
   right:0;
 }
 
+ion-icon{
+  font-size: 1.4rem;
+  padding-top: 0.2rem;
+}
+.icon-grande{
+  font-size: 2rem;
+  padding-top: 0.5rem;
+}
 
 /*DARK MODE FINAL*/
+
+
+.inferior{
+  width: 100%;
+  height: 10vh;
+  background: rgb(205, 255, 255);
+  text-align: center;
+  outline: solid 0.5rem rgba(36, 141, 160, 0.5);
+}
 
 
 
